Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7087

main.stat_tables-enospc fails in buildbot on a valgrind build

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/6310/steps/test/logs/stdio

      main.stat_tables-enospc                  w2 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2014-11-11 06:29:31
      line
      ==24301== Thread 4:
      ==24301== Syscall param write(buf) points to uninitialised byte(s)
      ==24301==    at 0x4E3B7FB: ??? (in /lib64/libpthread-2.9.so)
      ==24301==    by 0xE1B2D6: my_write (my_write.c:48)
      ==24301==    by 0xDFD818: my_b_flush_io_cache (mysql_file.h:1141)
      ==24301==    by 0xDFF095: _my_b_write (mf_iocache.c:1544)
      ==24301==    by 0x6B9CD4: unique_write_to_file_with_count(unsigned char*, unsigned int, Unique*) (uniques.cc:55)
      ==24301==    by 0xE249A3: tree_walk_left_root_right (tree.c:551)
      ==24301==    by 0x6BA26F: Unique::flush() (uniques.cc:381)
      ==24301==    by 0x673E67: Count_distinct_field::add() (sql_class.h:4558)
      ==24301==    by 0x66C468: collect_statistics_for_table(THD*, TABLE*) (sql_statistics.cc:2237)
      ==24301==    by 0x6F250A: mysql_admin_table(THD*, TABLE_LIST*, st_ha_check_opt*, char const*, thr_lock_type, bool, bool, unsigned int, int (*)(THD*, TABLE_LIST*, st_ha_check_opt*), int (handler::*)(THD*, st_ha_check_opt*), int (*)(THD*, TABLE_LIST*)) (sql_admin.cc:734)
      ==24301==    by 0x6F2C91: Sql_cmd_analyze_table::execute(THD*) (sql_admin.cc:1148)
      ==24301==    by 0x5E81EE: mysql_execute_command(THD*) (sql_parse.cc:5078)
      ==24301==    by 0x5EDB19: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6407)
      ==24301==    by 0x5EF54B: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1299)
      ==24301==    by 0x5F0D31: do_command(THD*) (sql_parse.cc:996)
      ==24301==    by 0x6E046E: do_handle_one_connection(THD*) (sql_connect.cc:1379)
      ==24301==  Address 0xd8b80e9 is 249 bytes inside a block of size 65,544 alloc'd
      ==24301==    at 0x4C25DD6: malloc (vg_replace_malloc.c:270)
      ==24301==    by 0xE1715A: my_malloc (my_malloc.c:100)
      ==24301==    by 0xDFEC1B: init_io_cache (mf_iocache.c:231)
      ==24301==    by 0xDFB0E9: open_cached_file (mf_cache.c:69)
      ==24301==    by 0x66B635: collect_statistics_for_table(THD*, TABLE*) (sql_statistics.cc:1381)
      ==24301==    by 0x6F250A: mysql_admin_table(THD*, TABLE_LIST*, st_ha_check_opt*, char const*, thr_lock_type, bool, bool, unsigned int, int (*)(THD*, TABLE_LIST*, st_ha_check_opt*), int (handler::*)(THD*, st_ha_check_opt*), int (*)(THD*, TABLE_LIST*)) (sql_admin.cc:734)
      ==24301==    by 0x6F2C91: Sql_cmd_analyze_table::execute(THD*) (sql_admin.cc:1148)
      ==24301==    by 0x5E81EE: mysql_execute_command(THD*) (sql_parse.cc:5078)
      ==24301==    by 0x5EDB19: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6407)
      ==24301==    by 0x5EF54B: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1299)
      ==24301==    by 0x5F0D31: do_command(THD*) (sql_parse.cc:996)
      ==24301==    by 0x6E046E: do_handle_one_connection(THD*) (sql_connect.cc:1379)
      ==24301==    by 0x6E0594: handle_one_connection (sql_connect.cc:1293)
      ==24301==    by 0x986676: pfs_spawn_thread (pfs.cc:1860)
      ==24301==    by 0x4E3506F: start_thread (in /lib64/libpthread-2.9.so)
      ==24301==    by 0x62F913C: clone (in /lib64/libc-2.9.so)
      ^ Found warnings in /dev/shm/var_auto_xTWj/2/log/mysqld.1.err

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2h 40m
                  2h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.