MDEV-7087 main.stat_tables-enospc fails in buildbot on a valgrind build

when reading data into the record buffer, the tail of the VARCHAR
(between real and max varchar length) is not written to. initialize the record
buffer to avoid writing uninitialized memory to disk.